--- a/Source/StockpileStackLimit/StockpileStackLimit.csproj
+++ b/Source/StockpileStackLimit/StockpileStackLimit.csproj
@@ -32,6 +32,15 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug quicktest|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\Debug quicktest\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony, Version=1.2.0.1, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\Lib.Harmony.1.2.0.1\lib\net35\0Harmony.dll</HintPath>
@@ -65,6 +74,7 @@
     <Compile Include="IntHolder.cs" />
     <Compile Include="Limits.cs" />
     <Compile Include="ModEntry.cs" />
+    <Compile Include="InlinePatch.cs" />
     <Compile Include="Patch.cs" />
     <Compile Include="PendingHaulJobsTracker.cs" />
     <Compile Include="PickUpAndHaulPatcher.cs" />
